tests/unit/default/syntax-error/164-alter-table-dot-name-type.e.t
---- IN ----
*%table.name:int
---- OUT ----
---- ERR ----
syntax: expected `=>` after `*%table.name:int` instead of EOL at position 16 - at line 1
---- EXIT ----
1
